--- a/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
+++ b/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
@@ -87,15 +87,17 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Encryption\Generator\Md5.cs" />
+    <Compile Include="EntityConversion\OneEntityToAnotherExtension.cs" />
+    <Compile Include="Extensions\StringExtension.cs" />
+    <Compile Include="Hashing\Md5.cs" />
+    <Compile Include="EntityConversion\ObjectToArrary.cs" />
     <Compile Include="Global\Constants.cs" />
     <Compile Include="DataTypeFormat\ObjectProperty.cs" />
-    <Compile Include="ObjectToArray\ObjectToArrary.cs" />
     <Compile Include="Processor\CacheProcessor.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Processor\CookieProcessor.cs" />
     <Compile Include="Database\DataTypeSupport.cs" />
-    <Compile Include="Database\EntityToString.cs" />
+    <Compile Include="EntityConversion\EntityToString.cs" />
     <Compile Include="Pagination\Pagination.cs" />
     <Compile Include="Pagination\PaginationInfo.cs" />
     <Compile Include="Encryption\Cryptography.cs" />
@@ -105,13 +107,14 @@
     <Compile Include="Mailer\CustomMailConfig.cs" />
     <Compile Include="Mailer\GmailConfig.cs" />
     <Compile Include="Mailer\MailConfig.cs" />
-    <Compile Include="Miscellaneous\Extensions\ClassExtention.cs" />
+    <Compile Include="Extensions\ClassExtention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Starter.cs" />
     <Compile Include="Error\ErrorCollector.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Miscellaneous\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
