--- a/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
+++ b/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
@@ -93,6 +93,7 @@
       <Private>True</Private>
       <HintPath>..\..\TestMvcApp\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config">
@@ -106,9 +107,14 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\AppConfig.cs" />
+    <Compile Include="Config\ResConfig.cs" />
+    <Compile Include="Config\WebConfig.cs" />
     <Compile Include="Extensions\CollectionExtension.cs" />
+    <Compile Include="Extensions\DirectoryExtension.cs" />
+    <Compile Include="Extensions\XmlExtension.cs" />
     <Compile Include="Miscellaneous\DirectoryExtension.cs" />
-    <Compile Include="Extensions\OneTypeToAnother.cs" />
+    <Compile Include="Extensions\CastingExtension.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Hashing\BaseHasher.cs" />
     <Compile Include="Hashing\Hasher.cs" />
@@ -116,7 +122,7 @@
     <Compile Include="Hashing\Md5Hasher.cs" />
     <Compile Include="EntityConversion\ObjectToArrary.cs" />
     <Compile Include="Global\Constants.cs" />
-    <Compile Include="DataTypeFormat\ObjectProperty.cs" />
+    <Compile Include="EntityType\ObjectProperty.cs" />
     <Compile Include="Mail\MailSendingWrapper.cs" />
     <Compile Include="Extensions\BinaryFileExtenstion.cs" />
     <Compile Include="Miscellaneous\HtmlHelper.cs" />
@@ -127,18 +133,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Processor\CacheProcessor.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="Config\DevMvcConfig.cs" />
     <Compile Include="Processor\CookieProcessor.cs" />
-    <Compile Include="DataTypeFormat\TypeChecker.cs" />
+    <Compile Include="FormatType\Checker.cs" />
     <Compile Include="EntityConversion\EntityToString.cs" />
     <Compile Include="Encryption\Cryptography.cs" />
     <Compile Include="Enums\CommonEnums.cs" />
-    <Compile Include="DataTypeFormat\BasicError.cs" />
+    <Compile Include="EntityType\BasicError.cs" />
     <Compile Include="Error\Handler.cs" />
     <Compile Include="Mail\CustomMailServer.cs" />
     <Compile Include="Mail\GmailServer.cs" />
     <Compile Include="Mail\MailServer.cs" />
-    <Compile Include="Extensions\ClassExtention.cs" />
+    <Compile Include="Extensions\ExtendedExtention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mvc.cs" />
     <Compile Include="Error\ErrorCollector.cs" />
