--- a/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
+++ b/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
@@ -106,7 +106,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HtmlEnhancements\CommonCssStyle.cs" />
     <Compile Include="Encryption\Pbkdf2Encryption.cs" />
+    <Compile Include="HtmlEnhancements\CasecadingStyleSheets.cs" />
+    <Compile Include="Enums\ErrorType.cs" />
+    <Compile Include="Enums\MailingType.cs" />
     <Compile Include="Extensions\CollectionExtension.cs" />
     <Compile Include="Miscellaneous\DirectoryExtension.cs" />
     <Compile Include="Extensions\OneTypeToAnother.cs" />
@@ -120,7 +124,7 @@
     <Compile Include="DataTypeFormat\ObjectProperty.cs" />
     <Compile Include="Mail\MailSendingWrapper.cs" />
     <Compile Include="Extensions\BinaryFileExtenstion.cs" />
-    <Compile Include="Miscellaneous\HtmlHelper.cs" />
+    <Compile Include="HtmlEnhancements\HtmlHelper.cs" />
     <Compile Include="Pagination\Pagination.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -133,7 +137,7 @@
     <Compile Include="DataTypeFormat\TypeChecker.cs" />
     <Compile Include="EntityConversion\EntityToString.cs" />
     <Compile Include="Hashing\SimpleHasher.cs" />
-    <Compile Include="Enums\CommonEnums.cs" />
+    <Compile Include="Enums\DateTimeFormatType.cs" />
     <Compile Include="DataTypeFormat\BasicError.cs" />
     <Compile Include="Error\Handler.cs" />
     <Compile Include="Mail\CustomMailServer.cs" />
