--- a/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
+++ b/DevMVCComponent/DevMVCComponent/DevMVCComponent.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -26,6 +26,7 @@
     <IISExpressUseClassicPipelineMode />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\DurnitySomachar\Magazine\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +41,7 @@
     <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
     <DocumentationFile>
     </DocumentationFile>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -51,6 +53,7 @@
     <DocumentationFile>bin\DevMvcComponent.xml</DocumentationFile>
     <RegisterForComInterop>true</RegisterForComInterop>
     <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -67,12 +70,16 @@
       <HintPath>..\..\TestMvcApp\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Entity" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\..\TestMvcApp\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.Helpers.dll</HintPath>
@@ -93,6 +100,7 @@
       <Private>True</Private>
       <HintPath>..\..\TestMvcApp\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config">
@@ -111,11 +119,13 @@
     <Compile Include="Enums\ErrorType.cs" />
     <Compile Include="Enums\MailingType.cs" />
     <Compile Include="Extensions\CollectionExtension.cs" />
-    <Compile Include="HtmlEnhancements\CasecadingStyleSheets.cs" />
-    <Compile Include="HtmlEnhancements\CommonCssStyle.cs" />
-    <Compile Include="HtmlEnhancements\HtmlHelper.cs" />
+    <Compile Include="Extensions\FileInfoExtension.cs" />
+    <Compile Include="Extensions\FileSavingExtension.cs" />
+    <Compile Include="HtmlEnhancements\CssStyle.cs" />
+    <Compile Include="HtmlEnhancements\CssProperties.cs" />
+    <Compile Include="HtmlEnhancements\HtmlHelperExtension.cs" />
     <Compile Include="Miscellaneous\DirectoryExtension.cs" />
-    <Compile Include="Extensions\OneTypeToAnother.cs" />
+    <Compile Include="Extensions\CastingExtension.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Hashing\BaseHasher.cs" />
     <Compile Include="Hashing\Hasher.cs" />
