--- a/DevMVCComponent/DevMVCComponent/packages.config
+++ b/DevMVCComponent/DevMVCComponent/packages.config
@@ -2,7 +2,7 @@
 
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" requireReinstallation="True" />
+  <!--<package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />-->
 </packages>
