--- a/DevMVCComponent/DevMVCComponent/packages.config
+++ b/DevMVCComponent/DevMVCComponent/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
-  <!--<package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />-->
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
 </packages>
